# MRT_TableQA

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev.md  pyproject.toml
docs/: external_config.md  pre_commit_hooks.md
tests/: utils.py
tests/assets/: explainer_outputs.json  table_result.json
tests/system/: test_controller_coder.py  test_run_benchmark.py
tests/unit/: test_coder.py  test_column_descriptor.py  test_config.py  test_context.py  test_dataset.py  test_explainer.py  test_formatter.py  test_inferencer.py  test_interpreter.py  test_process_all_tables.py  test_process_one_table.py  test_reporter.py  test_save.py
tqa/coder/controllers/: controller.py
tqa/coder/domain/services/: column_descriptor_service.py  output_parse_service.py  service.py
tqa/coder/usecases/: column_description_usecase.py  formatter_usecase.py  interpreter_usecase.py  output_parse_uc.py  process_batches_usecase.py  process_table_usecase.py  qa_usecase.py  report_usecase.py
tqa/common/: utils.py  utils_decorators.py
tqa/common/configuration/: config.py  config.yaml  logger.py  logger.yaml
tqa/common/domain/entities/: Dataset.py  ExeContext.py
tqa/common/domain/services/: CoderParserService.py  Evaluator.py  InferenceService.py  Parser.py  Reporter.py  Service.py
tqa/common/errors/: application_exception.py
tqa/common/infrastructure/: abstract_engine.py  abstract_repository.py  postgres_engine.py
tqa/common/usecases/: base.py
